<resources>
    <string name="app_name">AttadDevlopment</string>

    <array name="country">

        <item>Oman</item>
        <item>India</item>
        <item>Philippines</item>
    </array>

    <string name="title_activity_main_home">MainHome</string>
    <string name="clickbacktoexit">Click back again to exit</string>

    // Navgation drower .......

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    // Fragments .......

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="myAccount">MyAccount</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="my_order">My Order</string>
    <string name="my_messages">My Messages</string>
    <string name="courses">Courses</string>
    <string name="foss">Foss</string>
    <string name="live_support">Live Support</string>
    <string name="contact_us">Contact Us</string>
    <string name="location">Location</string>
    <string name="ourTeam">OurTeam</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>

    <!-- Home -->
    <string name="popular">Popular Items</string>
    <string name="neww">New Items</string>
    <string name="spichaloffers">Special Offers</string>

    <!--main menu categories-->
    <string name="chips">CHIPS</string>
    <string name="component">COMPONENTS</string>
    <string name="sensors">SENSORS</string>
    <string name="other">OTHER</string>
    <string name="kits">KITS</string>
    <string name="boards">BOARDS</string>
    <string name="mechanics">MECHANICS</string>
    <string name="robotics">ROBOTICS</string>


    <!--home fragment Buttons-->
    <string name="components">Components</string>
    <string name="Chips">Chips</string>
    <string name="sensers">Sensers</string>
    <string name="Boards">Boards</string>
    <string name="others">Others</string>
    <string name="Kits">Kits</string>


    <!--product View page buttons-->
    <string name="like">Like</string>
    <string name="addtowishlist">Add To Wishlist</string>
    <string name="addtocart">Add To Cart</string>
    <string name="confirm">Confirm</string>
    <string name="getqutation">Get Quotation</string>
    <string name="title_activity_product__container">Product View</string>


    <!--enter quatity layout-->
    <string name="enterquantity">Please Enter Quantity :</string>
    <string name="quantity">Quantity</string>
    <string name="cancel">Cancel</string>


    <!--cart-->
    <string name="mycart">My Cart</string>
    <string name="total">Total</string>
    <string name="changequantity">Change Quantity</string>
    <string name="remove">Delete</string>
    <string name="congrats">Congrats</string>
    <string name="cartconfiremd">Your cart has been confirmed. Please proceed to the next step</string>
    <string name="next">Proceed</string>
    <string name="sessionended">Your Session is ended please reconfirm your cart and try again</string>
    <string name="reconfirm">Reconfirm</string>
    <string name="noemail">You don\'t seem to have an email please go to your account &amp; set one</string>
    <string name="ooops">Oooops</string>
    <string name="areusure">Are you sure ?</string>
    <string name="completepayment">Please wait payment is complete , our Robots are proccessing your order</string>
    <string name="couldntproccedpayment">We could NOT process your payment. Your card has been declined by the issuer. Please contact your bank</string>
    <string name="quataition">Qutation will be sent to your email soon</string>
    <string name="priceisupdated">Be Aware Price is updated</string>
    <string name="itemoutofstock">The item is out of stock please delete it</string>
    <string name="wrongquantity">The Quantity is more then stock</string>
    <string name="something_went_wrong">Somthing went wrong try again</string>
    <string name="quantity_zero">Quantitiy Cant be zero or more then Stock</string>


    <string name="noorders">Your cart is still empty</string>

    <string name="thereare">There are </string>
    <string name="thereis">There is </string>
    <string name="oneuqnaitiychanged">item is been updated in Quantity or price please check it out and try again</string>
    <string name="multiplequantitychaned">items are been updated in Quantity or price please check them out</string>
    <string name="registeredsuceefully">Thank you..Registered successfully</string>

    <string name="thanku">Thank You… :)</string>
    <string name="orderisplaced">Your Order has been placed</string>
    <string name="terms">Terms</string>
    <string name="continueshopping">Continue Shopping</string>


</resources>
