<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single"
        android:id="@+id/group1">
        <item
            android:id="@+id/nav_Home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_Account"
            android:icon="@drawable/my_account"
            android:title="@string/myAccount" />
        <item
            android:id="@+id/nav_Wishlist"
            android:icon="@drawable/wishlist_g"
            android:title="@string/my_wishlist"
            app:actionLayout="@layout/menu_counter"/>
        <item
            android:id="@+id/nav_Order"
            android:icon="@drawable/my_orders"
            android:title="@string/my_order"
            app:actionLayout="@layout/menu_counter"/>
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/my_message"
            android:title="@string/my_messages"
            app:actionLayout="@layout/menu_counter"/>
        <item
            android:id="@+id/nav_Courses"
            android:icon="@drawable/courses"
            android:title="@string/courses" />
        <item
            android:id="@+id/nav_foss"
            android:title="@string/foss" />
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/group2">
        <item
            android:id="@+id/nav_LiveSupport"
            android:icon="@drawable/live_support"
            android:title="@string/live_support" />
        <item
            android:id="@+id/nav_ContactUs"
            android:icon="@drawable/contact_us"
            android:title="@string/contact_us" />
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/group3">
        <item
            android:id="@+id/nav_Location"
            android:icon="@drawable/our_location"
            android:title="@string/location" />
        <item
            android:id="@+id/nav_OurTeam"
            android:icon="@drawable/app_team"
            android:title="@string/ourTeam" />
        <item
            android:id="@+id/nav_Settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_About"
            android:title="@string/about" />
    </group>

</menu>
