<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/components"
        android:id="@+id/butComponents"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="186dp" />

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/Chips"
        android:id="@+id/butChips"
        android:layout_alignBottom="@+id/butComponents"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/sensers"
        android:id="@+id/butSensers"
        android:layout_below="@+id/butComponents"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/Boards"
        android:id="@+id/butBoards"
        android:layout_below="@+id/butChips"
        android:layout_alignRight="@+id/butChips"
        android:layout_alignEnd="@+id/butChips" />

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/others"
        android:id="@+id/butOthers"
        android:layout_below="@+id/butSensers"
        android:layout_alignRight="@+id/butSensers"
        android:layout_alignEnd="@+id/butSensers" />

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/Kits"
        android:id="@+id/butKits"
        android:layout_below="@+id/butBoards"
        android:layout_alignLeft="@+id/butBoards"
        android:layout_alignStart="@+id/butBoards" />

</RelativeLayout>