<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="left">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="?attr/actionBarTheme"
        android:minHeight="?attr/actionBarSize"
        android:id="@+id/toolbar2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/enterquantity"
        android:id="@+id/textView6"
        android:textSize="25sp"
        android:layout_marginLeft="4dp"
        android:paddingTop="4dp"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="4dp">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        app:et_labelTextColor="@color/nliveo_orange_alpha_colorPrimaryDark"
        android:hint="@string/quantity"
        android:ems="10"
        android:id="@+id/quanitityedittext" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:weightSum="2">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/cancel"
            android:layout_weight="1"
            tools:ignore="ButtonStyle"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="#7f8c8d" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/confirmbutton"
            android:layout_weight="1"
            tools:ignore="ButtonStyle"
            android:textColor="@color/nliveo_orange_colorPrimary" />
    </LinearLayout>
</LinearLayout>
